re #204. Fixed alignement of icons and texts.

--- a/app/webroot/css/elements/sentences_group.css
+++ b/app/webroot/css/elements/sentences_group.css
@@ -163,10 +163,7 @@ a.romanization {
 /* 
  * Edit in place 
  */
-.editable{
-    margin-left: 20px;
-}
-.editable:hover{
+.editableSentence:hover{
     background: #eeee88;
 }
 
@@ -241,7 +238,7 @@ display: none;
  */
 .infoIcon{
 	float: left;
-	margin-right: 10px;
+	margin: 2px 10px 2px 5px;
 }
 
 .loading {
